# open-world-rpg

./: .clang-format  .gitignore  CMakeLists.txt  Main.cpp  README.md
res/Textures/Enemies/: cat_non-blurred - Copy.ase
res/Textures/Tiles/: 1.aseprite  small_bush_1.aseprite
src/: Game.cpp  Game.h
src/Animation/: Action.cpp  Action.h  Actions.h  Animation.cpp  Animation.h  AnimationPlayer.cpp  AnimationPlayer.h  NonRepeatingAnim.cpp  NonRepeatingAnim.h  RepeatingAnim.cpp  RepeatingAnim.h
src/Animation/Hard-coded Animation Players/: MoveableAnimationPlayer.cpp  MoveableAnimationPlayer.h
src/Animation/Hard-coded Animations/: AnimationPlayer.cpp  AnimationPlayer.h  HumanoidAnimInitializer.cpp  HumanoidAnimInitializer.h  LEGACY.cpp  MoveableAnimationPlayer.h
src/Debug/: DebugLog.h
src/GUI/: Button.cpp  Button.h  Hud.cpp  Hud.h  StackMenu.cpp  StackMenu.h  Textbox.cpp  Textbox.h  Widget.cpp  Widget.h
src/Resource Managers/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
src/ResourceManagers/: ResourceHolder.cpp
src/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
src/Util/: ArgDependentInitializer.h  CollisionChecker.cpp  CollisionChecker.h  Constants.h  ConvexShapeExtra.cpp  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  MathExtra.h  NonMoveable.h  PositionBasedInitializer.h  Random.h  SpriteConstants.cpp  SpriteConstants.h  SpriteShadowGenerator.cpp  SpriteShadowGenerator.h  StringExtra.cpp  StringExtra.h  ToggleKey.cpp  ToggleKey.h  TransformableExtra.cpp  TransformableExtra.h
src/Util/Animation/: Animation.cpp  Animation.h  NonRepeatingAnim.cpp  NonRepeatingAnim.h  RepeatingAnim.cpp  RepeatingAnim.h
src/Util/Concurrency/: Semaphore.cpp  Semaphore.h  SpscQueue.h
src/Util/Debug/: DebugPrint.cpp  DebugPrint.h  VectorDebug.cpp  VectorDebug.h
src/Util/Initializer/: ArgDependentInitializer.h  InitializerPool.cpp  InitializerPool.h  PositionBasedInitializerPool.cpp  PositionBasedInitializerPool.h  ScoredInitializerPool.cpp  ScoredInitializerPool.h
src/Util/Observer Pattern/: Observer.h  Subject.cpp  Subject.h
src/World/: World.cpp  World.h
tests/: CMakeLists.txt  catch.hpp  enableCatch.cpp
tests/WorldGenTests/: EnvAllocationTest.cpp
(+380 files in other folders)
