project("catch_tests_run")
cmake_minimum_required(VERSION 3.14)
set(SFML_DIR "${CMAKE_CURRENT_LIST_DIR}/../libs/SFML-2.5.1/lib/cmake/SFML")
file(GLOB ALL_REQUIRED_DLL "../libs/required_dlls/*.dll")
file(COPY ${ALL_REQUIRED_DLL} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
set(GCC_COVERAGE_COMPILE_FLAGS "-Wa,-mbig-obj")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
set(CMAKE_CXX_STANDARD 17)
link_libraries(stdc++fs) #link the filesystem
file(GLOB_RECURSE SCRF "../src/*.cpp" "../src/*.hpp")
file(COPY "../res" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(catch_tests_run ${SCRF} enableCatch.cpp WorldGenTests/EnvAllocationTest.cpp)
find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
target_link_libraries(catch_tests_run sfml-audio sfml-graphics sfml-window sfml-system)
